syntax = "proto3";

option go_package = "orderly/common/pb";

service Account {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetProfileById(GetProfileRequest) returns (GetProfileResponse);
  rpc GetNewTokens(GetNewTokensRequest) returns (GetNewTokensResponse);
  rpc UpdateById(UpdateUserRequest) returns (UpdateUserResponse);
  rpc ChangeRole(ChangeRoleRequest) returns (ChangeRoleResponse);
}

message ChangeRoleRequest{
  int64 id = 1;
  string Role = 2;
}

message ChangeRoleResponse{
  int64 id = 1;
  string Role = 2;
  string AccessToken = 3;
  string RefreshToken = 4;
}


message PublicUserProfile {
  int64 Id = 1;
  string CreatedAt = 2;
  string UpdatedAt = 3;
  string Email = 4;
  string Name = 5;
  string Role = 6;
  optional int64 NumberCompletedOrders = 7;
}

message LoginRequest{
  string Email = 1;
  string Password = 2;
}

message LoginResponse{
  string AccessToken = 1;
  string RefreshToken = 2;
  int64 Id = 3;
}

message RegisterRequest{
  string Email = 1;
  string Password = 2;
  string Name = 3;
}

message RegisterResponse{
  string AccessToken = 1;
  string RefreshToken = 2;
  int64 Id = 3;
}

message GetNewTokensRequest{
  string refreshToken = 1;
  int64 id = 2;
  string role = 3;
}

message GetNewTokensResponse{
  string accessToken = 1;
  string refreshToken = 2;
}

message UpdateUserRequest{
  int64 id = 1;
  optional string Name = 2;
  optional string Email = 3;
  optional string Password = 4;
  optional string NewPassword = 5;
}
message UpdateUserResponse {
  bool isSuccess = 1;
}
message GetProfileRequest {
  int64 Id = 1;
}
message GetProfileResponse {
  PublicUserProfile Profile = 1;
}